# VirtuMart

./: .gitignore  Makefile  README.md
.github/workflows/: build.yml
backend/: .env_example  .rustfmt.toml  Cargo.toml  Makefile
backend/src/: main.rs
backend/tests/: api_test.rs
infrastructure/: Dockerfile  docker-compose.yml
