[package]
name = "virtumart"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
environment = { path = "packages/environment" }
errors = { path = "packages/errors" }
model = { path = "packages/model" }
database = { path = "packages/database" }
repository = { path = "packages/repository" }
service = { path = "packages/service" }
controller = { path = "packages/controller" }
state = { path = "packages/state" }
app = { path = "packages/app" }

tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"

[workspace]
members = [
    "packages/environment",
    "packages/errors",
    "packages/model",
    "packages/database",
    "packages/repository",
    "packages/service",
    "packages/controller",
    "packages/state",
    "packages/app",

]